# killsnoop

./: .dir-locals.el  .gitignore  Cargo.toml  README.md
killsnoop/: Cargo.toml
killsnoop-common/: Cargo.toml
killsnoop-common/src/: lib.rs
killsnoop-ebpf/: Cargo.toml
killsnoop-ebpf/src/: main.rs
killsnoop/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
