[package]
name = "killsnoop"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main", features=["async_tokio"] }
killsnoop-common = { path = "../killsnoop-common", features=["userspace"] }
anyhow = "1.0.42"
ctrlc = "3.2"
tokio = { version = "1.9.0", features = ["full"] }
bytes = "1"
chrono = "0.4"

[[bin]]
name = "killsnoop"
path = "src/main.rs"
