[package]
name = "killsnoop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
killsnoop-common = { path = "../killsnoop-common", features=["user"] }
anyhow = "1.0.42"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1"
chrono = "0.4"

[[bin]]
name = "killsnoop"
path = "src/main.rs"
